Melhoria na arquitetura de infra do back-end
